--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import MainLayout from "../layouts/MainLayout.astro";
+import HeroTalent from "../components/sections/HeroTalent.astro";
+import Solutions from "../components/sections/Solutions.astro";
+import WhyChooseUs from "../components/sections/WhyChooseUs.astro";
+import Metrics from "../components/sections/Metrics.astro";
+import JobCategories from "../components/sections/JobCategories.astro";
+import CTA from "../components/sections/CTA.astro";
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<MainLayout>
+  <HeroTalent />
+  <Solutions />
+  <WhyChooseUs />
+  <Metrics />
+  <JobCategories />
+  <CTA />
+</MainLayout>
