--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -40,7 +40,7 @@ const {
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>{title}</title>
 
     <!-- Dark mode initialization (inline to prevent FOUC) -->
